[tool.poetry]
name = "SocketStress"
version = "0.0.1"
description = "UI&Backend Stress test"
authors = ["Andrei Chenchik <andrei@chenchik.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
